force-app/main/default/objects/BankAccountUpdated__e/BankAccountUpdated__e.object-meta.xml
<CustomObject>
    <label>BankAccountUpdated</label>
    <pluralLabel>BankAccountsUpdated</pluralLabel>
</CustomObject>