force-app/main/default/objects/BankAccountUpdated__e/fields/BankAccountReferenceText__c.field-meta.xml
<CustomField>
    <fullName>BankAccountReferenceText__c</fullName>
    <description>Payment reference text that appears on bank statements (e.g., invoice number, customer ID). Limited to 20 alphanumeric characters. Avoid special characters.</description>
    <label>Bank Account Reference Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>