force-app/main/default/objects/BankAccountUpdated__e/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <description>Official legal name of the financial institution (e.g., &quot;Deutsche Bank AG&quot;, &quot;JPMorgan Chase Bank, N.A.&quot;). Include legal form abbreviations when applicable.</description>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>