force-app/main/default/objects/BankAccountUpdated__e/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Official city name as used in postal addresses. Use unabbreviated form (e.g., &quot;San Francisco&quot; not &quot;SF&quot;). For international addresses, use native spelling when Latin characters are available.</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>