force-app/main/default/objects/BankAccountUpdated__e/fields/ERPCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPCustomerNumber__c</fullName>
    <description>Unique identifier for the customer account in the external ERP system.</description>
    <label>ERP Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>