force-app/main/default/objects/BankAccountUpdated__e/fields/ERPInternalBankId__c.field-meta.xml
<CustomField>
    <fullName>ERPInternalBankId__c</fullName>
    <description>Unique bank identifier from the ERP system.</description>
    <label>Bank Identification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>