force-app/main/default/objects/BankAccountUpdated__e/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <description>The date when the IBAN became/will become active for transactions. Must be earlier than IBANValidTo__c if both fields are populated. Leave blank for immediately effective IBANs.</description>
    <label>IBAN</label>
    <length>34</length>
    <type>Text</type>
</CustomField>