force-app/main/default/objects/BankAccountUpdated__e/fields/IBANValidFrom__c.field-meta.xml
<CustomField>
    <fullName>IBANValidFrom__c</fullName>
    <label>IBAN Valid From</label>
    <type>Date</type>
</CustomField>