force-app/main/default/objects/BankAccountUpdated__e/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>Unique Salesforce Identification.</description>
    <label>Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>